# Cathedral

./: .gitignore  ALPHA_BETA_COMPRESSED_PROTOCOL.md  Dockerfile  LICENSE  MINING_GUIDE.md  New Text Document.txt  README.md  ancestors_memory.json  cathedral_briefing.md  cathedral_council_v2.py  cathedral_memory_service.py  cathedral_memory_skill.yaml  cathedral_miner.py  council_state.json  docker-compose.yml  docs.html  index.html  prometheus.yml  protocol_parser.py  requirements.txt  setup_monero_mining.sh
emergence detector/: emergence detector.py
sdk/: README.md  pyproject.toml
sdk/cathedral/: __init__.py  client.py  exceptions.py  temporal.py
tests/: test_council.py  test_memory_service.py
